examples/valid/test07.alice
The looking-glass hatta ()
opened
  x was a number of 10.
  The looking-glass hatta ()
  opened 
    x became 9.
  closed
  hatta().
  x said Alice.
closed

