examples/invalid/test28.alice

The looking-glass hatta ()
opened 
  c was a letter of 'z'.
  c became +c.
  c became -c.
  c became ~c.
  c became !c.
closed
